; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_revert.c_revert_or_cherry_pick_usage.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_revert.c_revert_or_cherry_pick_usage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.replay_opts = type { i64 }

@REPLAY_REVERT = common dso_local global i64 0, align 8
@revert_usage = common dso_local global i8** null, align 8
@cherry_pick_usage = common dso_local global i8** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8** (%struct.replay_opts*)* @revert_or_cherry_pick_usage to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8** @revert_or_cherry_pick_usage(%struct.replay_opts* %0) #0 {
  %2 = alloca %struct.replay_opts*, align 8
  store %struct.replay_opts* %0, %struct.replay_opts** %2, align 8
  %3 = load %struct.replay_opts*, %struct.replay_opts** %2, align 8
  %4 = getelementptr inbounds %struct.replay_opts, %struct.replay_opts* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @REPLAY_REVERT, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = load i8**, i8*** @revert_usage, align 8
  br label %12

10:                                               ; preds = %1
  %11 = load i8**, i8*** @cherry_pick_usage, align 8
  br label %12

12:                                               ; preds = %10, %8
  %13 = phi i8** [ %9, %8 ], [ %11, %10 ]
  ret i8** %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
